# AgentForge

./: .agent-queries.json  .agent-store.json  .audit-log.json  .env.local  .eslintrc.json  .papertrade-store.json  DEPLOYMENT.md  README.md  check_wallet_balances.js  debug_xdr_parse.js  index.ts  next.config.mjs  package.json  pnpm-lock.yaml  scratch_deploy_diagnose.js  scratch_deploy_diagnose_brief.js  strip_wasm.js  supabase-schema-workflows.sql  test_contract_exist.js  test_live_transfer.js  test_prepare_fail.js  test_scval.js  test_transfer_failing.js
app/: globals.css  layout.tsx  page.tsx
cli/: index.ts
cli-sweep-agent/: .env.example  README.md
components/: Navbar.tsx  PageHero.tsx  PaymentModal.tsx  WalletConnect.tsx
consumers/: agent-executor.ts
contracts/: Cargo.toml  deploy-soroban.sh
contracts/af_token/: Cargo.toml
contracts/agent_registry/: Cargo.toml
contracts/agent_validator/: Cargo.toml
contracts/agent_validator/src/: lib.rs
contracts/agent_wallet/: Cargo.toml
contracts/agent_wallet/src/: lib.rs
contracts/execution_manager/: Cargo.toml
contracts/execution_manager/src/: lib.rs
contracts/payment_router/: Cargo.toml
contracts/payment_router/src/: lib.rs
lib/: demo-agents.ts  load-env.ts  soroban-deployment.ts  stellar.ts
my-agent/: README.md
server/: Cargo.toml
server/src/: app.rs  config.rs  lib.rs  main.rs
server/src/api/: agents.rs  audits.rs  mod.rs  papertrade.rs  runtimes.rs  wallets.rs  workflows.rs
server/src/audit/: mod.rs
server/src/payments/: mod.rs
server/src/runtime/: mod.rs
server/src/ws/: mod.rs
(+40 files in other folders)
